--- a/style.css
+++ b/style.css
@@ -2,18 +2,49 @@
 
 body {
     margin: 0px;
+    text-align: center;
+    font-family: 'Merriweather', serif;
+    font-size: 200%;
 }
 
 h1 {
-    margin-top: 0px;
+    font-size: 5.625rem;
+    line-height: 2;
+    margin: 0 auto ;
+    font-family:'Sacramento', cursive;
+    color: #66bfbf;
+    font-weight: normal;
 }
+
+h2, h3 {
+    font-family: 'montserrat', sans-serif;
+    font-size: 2.5rem;
+    color: #66bfbf;
+    font-weight: normal;
+}
+
+
 
 /* ================== Seção Classes ============ */
 
 .top-container {
     background-color: #14274e;
+    position: relative;
+    padding-top:100px ;
 }
 
 .efeito {
     text-decoration: underline;
+}
+
+.celebro-tech-cima {
+    position: absolute;
+    right: 20%;
+    top: 50px;
+}
+
+.celebro-tech-baixo {
+    position: absolute;
+    right: 70%;
+    bottom: 1%;
 }
