--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* ================== Seção Tags =============== */
 
 body {
+    color: #405148;
     margin: 0px;
     text-align: center;
     font-family: 'Merriweather', serif;
@@ -8,21 +9,47 @@ body {
 
 h1 {
     font-size: 5.625rem;
-    line-height: 2;
-    margin: 0 auto ;
+    margin: 50px auto 0 auto ;
     font-family:'Sacramento', cursive;
     color: #66bfbf;
-    font-weight: normal;
-}
+    }
 
-h2, h3 {
+h2 {
     font-family: 'montserrat', sans-serif;
     font-size: 2.5rem;
     color: #66bfbf;
     font-weight: normal;
+    padding-bottom: 10px;
+    padding: 5%;
 }
 
+h3 {
+    font-family: 'montserrat', sans-serif;
+    color: #66bfbf;
+    
+}
 
+p {
+    line-height: 2;
+}
+
+hr {
+    border: dotted #eaf6f6 6px;
+    border-bottom: none;
+    width: 5%;
+    margin: 100px auto;
+}
+
+a {
+    color: #90dadc;
+    font-family: 'montserrat', sans-serif;
+    margin: 10px 20px;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #eaf6f6;
+}
 
 /* ================== Seção Classes ============ */
 
@@ -30,6 +57,10 @@ h2, h3 {
     background-color: #14274e;
     position: relative;
     padding-top:100px ;
+}
+
+.middle-container {
+    margin: 100px auto;
 }
 
 .efeito {
@@ -52,7 +83,6 @@ h2, h3 {
     width: 50%;
     margin:100px auto;
     text-align: left;
-    line-height: 2;
 }
 
 .code-img {
@@ -66,4 +96,47 @@ h2, h3 {
     float: right;
     margin-right: 30px;
 }
+
+.contact-message {
+    width: 40%;
+    margin: 40px auto 60px;
+    text-align: center;
+}
+
+.bottom-container {
+    background-color: #328888;
+    padding: 50px 0 20px;
+    
+}
+
+.copyright {
+    color: #eaf6f6;
+    font-size: 0.75rem;
+    padding: 20px 0px;
+}
+                        
+                            
+@import url('https://fonts.googleapis.com/css2?Roboto&display=swap');
+
+.btn { 
+    cursor: pointer;
+    border:  solid rgb(31, 217, 201) 0px;
+    font-family: 'Roboto'; font-size: 20px; 
+    color: rgb(255, 255, 255); fill: 10px 30px; 
+    transition: 2s; 
+    width:300px; 
+    border-radius: 7px; 
+    background: linear-gradient( rgb(0, 197, 204) 0%, rgb(19, 112, 112) 82%); 
+    padding: 5px 15px;
+    text-decoration: none;
+    
+}
+
+
+.btn:hover{    
+    color: rgb(201, 216, 212); 
+    background: linear-gradient( rgb(0, 197, 204) 0%, rgb(31, 220, 220) 82%);
+    border-color: solid rgba(204, 0, 105, 0) 0px;
+}
+
 
